--- a/src/plugins/jabber/Makefile.am
+++ b/src/plugins/jabber/Makefile.am
@@ -5,11 +5,14 @@ noinst_LIBRARIES =
 
 libjabber_plugin_la_SOURCES = jabber_plugin.c \
     jabber_plugin.h \
-    jabber_plugin_roster.c \
-    jabber_plugin_roster.h \
-    jabber_plugin_protocol.c \
-    jabber_plugin_protocol.h
+    jabber_protocol.c \
+    jabber_protocol.h \
+    jabber_login.c \
+    jabber_login.h \
+    jabber_cb.c \
+    jabber_cb.h
 
+libjabber_plugin_la_CFLAGS = $(JABBER_CFLAGS)
 libjabber_plugin_la_LIBADD = $(JABBER_LIBS) $(top_builddir)/lib/libgg2_core.la
 
 
