--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
-dnl $Id: configure.in,v 1.23 2003/06/21 04:06:48 krzyzak Exp $
+dnl $Id: configure.in,v 1.24 2003/06/21 11:35:41 shaster Exp $
 
-m4_define([gg2_version],[2.0-CVS])
+m4_define([gg2_version],[2.0_CVS])
 
 AC_INIT(gg2,[gg2_version])
 AM_INIT_AUTOMAKE([gg2],[gg2_version])
