--- a/src/plugins/Makefile.am
+++ b/src/plugins/Makefile.am
@@ -18,8 +18,12 @@ if BUILD_XOSD
 XOSD=xosd
 endif
 
-if BUILD_DOCKLET
+if BUILD_DOCKLET_SYSTEM_TRAY
 DOCKLET=docklet
+endif
+
+if BUILD_DOCKLET_DOCKAPP
+DOCKAPP=docklet
 endif
 
 if BUILD_SOUND_ESD
