--- a/src/plugins/docklet/Makefile.am
+++ b/src/plugins/docklet/Makefile.am
@@ -1,16 +1,9 @@
-pkgdir = $(libdir)/gg2
+if BUILD_DOCKLET_SYSTEM_TRAY
+SYSTEM_TRAY=system-tray
+endif
 
-pkg_LTLIBRARIES = libdocklet_plugin.la
-noinst_LIBRARIES =
+if BUILD_DOCKLET_DOCKAPP
+DOCKAPP=dockapp
+endif
 
-libdocklet_plugin_la_CFLAGS = $(GTK_CFLAGS)
-
-libdocklet_plugin_la_SOURCES = docklet_plugin.c \
-    docklet_plugin.h \
-    eggtrayicon.c \
-    eggtrayicon.h
-    
-
-libdocklet_plugin_la_LIBADD = $(GTK_LIBS) $(top_builddir)/lib/libgg2_core.la
-libdocklet_plugin_la_LDFLAGS = -avoid-version  
-
+SUBDIRS = $(SYSTEM_TRAY) $(DOCKAPP)
