--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.33 2003/11/03 11:09:30 thrulliq Exp $
+dnl $Id: configure.in,v 1.34 2003/11/03 20:01:42 krzyzak Exp $
 
 m4_define([gg2_version],[2.0_CVS])
 
@@ -65,6 +65,10 @@ fi
 
 
 AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
+
+if test "x$PKG_CONFIG" = "xno"; then
+	AC_MSG_ERROR([pkgconfig ])
+fi
 
 PKG_CHECK_MODULES(GLIB,glib-2.0 >= 2.2.0,[
    CFLAGS="$CFLAGS $GLIB_CFLAGS"
@@ -331,26 +335,22 @@ if test "x$with_esd" = "xyes"; then
     fi
 fi
 
-
 AC_ARG_WITH(arts, [  --with-arts		  Build aRts! sound plugin	default=no])
 if test "x$with_arts" = "xyes"; then 
-    have_soundserverh=no
     AC_PROG_CXX
-    AC_CHECK_HEADERS(arts/soundserver.h, have_soundserverh=yes, have_soundserverh=no)
-
-    if test "$have_soundserverh" = yes; then
-
-	ARTS_CXXFLAGS="$CXXFLAGS -I/usr/include/kde -I/opt/kde/include -I/usr/X11R6/include"
-	ARTS_LIBS="-L/opt/kde/lib -L/usr/X11R6/lib -lstdc++ -lartsflow_idl -mcop -lartsflow -lartswavplayobject"
+    AC_PATH_PROG(ARTS_CONFIG, artsc-config, no)
+    
+    if test "x$ARTS_CONFIG" = "xno"; then
+    	want_arts=no
+	AC_MSG_WARN([artsc-config ])
+    else
+        ARTS_CXXFLAGS="$CXXFLAGS `$ARTS_CONFIG --cflags`"
+	ARTS_LIBS="`$ARTS_CONFIG --libs`"
 	AC_SUBST(ARTS_LIBS)
 	AC_SUBST(ARTS_CXXFLAGS)
-
-    
 	AC_SUBST(CXX, $CC)
 	AC_SUBST(CXXFLAGS)
 	want_arts=yes
-    else
-	want_arts=no
     fi
 else
     AM_CONDITIONAL(am__fastdepCXX, test yes = "$want_arts")
