--- a/gg2.desktop
+++ b/gg2.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
-Name=GnuGadu 2
-Comment=Instant messanger client
+Name=GNU Gadu
+Comment=Instant Messanger Client
 Comment[pl]=Wolne Gadanie
 Exec=gg2
 Icon=gg2.png
