--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.35 2003/11/03 21:06:59 krzyzak Exp $
+dnl $Id: configure.in,v 1.36 2003/11/17 12:25:37 thrulliq Exp $
 
 m4_define([gg2_version],[2.0_CVS])
 
@@ -206,7 +206,7 @@ fi
 AC_ARG_WITH(gadu, [  --with-gadu		  Build gadu-gadu plugin	default=no])
 if test "x$with_gadu" = "xyes"; then 
     want_gadu=yes
-    PKG_CHECK_MODULES(GG,libgadu >= 1.0 ,[],want_gadu=no)
+    PKG_CHECK_MODULES(GG,libgadu >= 1.3.1 ,[],want_gadu=no)
 
 	if test "$want_gadu" = "no"; then 
 	    PKG_CHECK_MODULES(GG,libgadu = CVS,want_gadu=yes,want_gadu=no)
