- categories order changed - Exec -> TryExec

--- a/gg2.desktop
+++ b/gg2.desktop
@@ -4,9 +4,9 @@ Encoding=UTF-8
 Name=GNU Gadu
 Comment=Instant Messanger Client
 Comment[pl]=Wolne Gadanie
-Exec=gg2
+TryExec=gg2
 Icon=gg2.png
 Terminal=false
 Type=Application
-Categories=GTK;Application;Network;InstantMessaging;
+Categories=Application;Network;InstantMessaging;GTK;
 # vi: encoding=utf-8
