--- a/lib/gg2_core.pc.in
+++ b/lib/gg2_core.pc.in
@@ -7,5 +7,5 @@ Name: libgg2_core
 Version: @PACKAGE_VERSION@
 Description: GNU Gadu 2 development
 Libs: -L${libdir} -lgg2_core @LDFLAGS@
-Cflags: -I${includedir} @CFLAGS@
+Cflags: -I${includedir} @CFLAGS_CLEAN@
 
