--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.45 2004/01/20 20:46:28 krzyzak Exp $
+dnl $Id: configure.in,v 1.46 2004/01/26 08:58:06 krzyzak Exp $
 
 m4_define([gg2_version],[2.0_CVS])
 
@@ -438,7 +438,7 @@ AC_SUBST(CFLAGS)
 AC_SUBST(CFLAGS_CLEAN)
 AC_SUBST(LDFLAGS)
 
-AC_OUTPUT([
+AC_OUTPUT([ m4/Makefile 
 Makefile
 lib/Makefile
 lib/gg2_core.pc
