--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.46 2004/01/26 08:58:06 krzyzak Exp $
+dnl $Id: configure.in,v 1.47 2004/01/26 19:16:13 krzyzak Exp $
 
 m4_define([gg2_version],[2.0_CVS])
 
@@ -55,7 +55,7 @@ ALL_LINGUAS="pl"
 GETTEXT_PACKAGE="$PACKAGE"
 AC_SUBST(GETTEXT_PACKAGE)
 
-AM_GLIB_GNU_GETTEXT
+AM_GNU_GETTEXT([external])
 
 AM_PROG_LIBTOOL
 AM_MAINTAINER_MODE
@@ -438,7 +438,9 @@ AC_SUBST(CFLAGS)
 AC_SUBST(CFLAGS_CLEAN)
 AC_SUBST(LDFLAGS)
 
-AC_OUTPUT([ m4/Makefile 
+AC_OUTPUT([ 
+m4/Makefile 
+po/Makefile.in
 Makefile
 lib/Makefile
 lib/gg2_core.pc
@@ -472,7 +474,6 @@ pixmaps/icons/rozgwiazda/Makefile
 pixmaps/icons/tlen-3d/Makefile
 sounds/Makefile
 themes/Makefile
-po/Makefile.in
 ])
 
 echo
