--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.49 2004/02/01 21:26:18 krzyzak Exp $
+dnl $Id: configure.in,v 1.50 2004/03/09 20:58:41 krzyzak Exp $
 
 m4_define([gg2_version],[2.0_CVS])
 
@@ -118,6 +118,7 @@ fi
 
 
 want_gui=no
+want_gtkspell=no
 want_gadu=no
 want_tlen=no
 want_jabber=no
@@ -136,6 +137,7 @@ want_all=no
 AC_ARG_WITH(all_plugins, [  --with-all-plugins	  Build all plugins		default=no])
 if test x$with_all_plugins = xyes; then
     with_gui=yes
+    with_gtkspell=yes
     with_gadu=yes
     with_tlen=yes
     with_jabber=yes
@@ -203,6 +205,14 @@ if test "x$with_gui" = "xyes"; then
     PKG_CHECK_MODULES(GTK,gtk+-2.0 >= 2.2.0,[],AC_MSG_ERROR($GTK_PKG_ERRORS))
     AC_SUBST(GTK_CFLAGS)
     AC_SUBST(GTK_LIBS)
+fi
+
+AC_ARG_WITH(gtkspell, [  --with-gtkspell	  Build GUI plugin with gtkspell support 	default=no])
+if test "x$with_gtkspell" = "xyes"; then 
+    want_gtkspell=yes
+    PKG_CHECK_MODULES(GTKSPELL,gtkspell-2.0 >= 2.0.0,[],AC_MSG_ERROR($GTK_PKG_ERRORS))
+    AC_SUBST(GTKSPELL_CFLAGS)
+    AC_SUBST(GTKSPELL_LIBS)
 fi
 
 AC_ARG_WITH(gadu, [  --with-gadu		  Build gadu-gadu plugin	default=no])
@@ -390,6 +400,7 @@ if test "x$with_update" = "xyes"; then
 fi
 
 AM_CONDITIONAL(BUILD_GUI, test "$want_gui" = "yes")
+AM_CONDITIONAL(USE_GTKSPELL, test "$want_gtkspell" = "yes")
 AM_CONDITIONAL(BUILD_GG, test "$want_gadu" = "yes")
 AM_CONDITIONAL(BUILD_TLEN, test "$want_tlen" = "yes")
 AM_CONDITIONAL(BUILD_JABBER, test "$want_jabber" = "yes")
@@ -478,21 +489,22 @@ themes/Makefile
 ])
 
 echo
-echo Build plugin GUI-GTK2.............. : $want_gui
-echo Build plugin Gadu-Gadu............. : $want_gadu
-echo Build plugin Tlen.pl............... : $want_tlen
-echo Build plugin Jabber................ : $want_jabber
-echo Build plugin docklet-system-tray... : $want_docklet_system_tray
-echo Build plugin docklet-dockapp....... : $want_docklet_dockapp
-echo Build plugin XOSD.................. : $want_xosd
-echo Build plugin sound ESD............. : $want_esd
-echo Build plugin sound aRts............ : $want_arts
-echo Build plugin sound OSS............. : $want_oss
-echo Build plugin sound external........ : $want_external
-echo Build plugin sms................... : $want_sms
-echo Build plugin remote................ : $want_remote
-echo Build plugin update................ : $want_update
-echo Build perl support................. : $want_perl
+echo Build plugin GUI-GTK2.................. : $want_gui
+echo Build plugin GUI with gtkspell support..: $want_gtkspell
+echo Build plugin Gadu-Gadu................. : $want_gadu
+echo Build plugin Tlen.pl................... : $want_tlen
+echo Build plugin Jabber.................... : $want_jabber
+echo Build plugin docklet-system-tray....... : $want_docklet_system_tray
+echo Build plugin docklet-dockapp........... : $want_docklet_dockapp
+echo Build plugin XOSD...................... : $want_xosd
+echo Build plugin sound ESD................. : $want_esd
+echo Build plugin sound aRts................ : $want_arts
+echo Build plugin sound OSS................. : $want_oss
+echo Build plugin sound external............ : $want_external
+echo Build plugin sms....................... : $want_sms
+echo Build plugin remote.................... : $want_remote
+echo Build plugin update.................... : $want_update
+echo Build perl support..................... : $want_perl
 echo
 echo "*************************************************************"
 echo Remember that GNU Gadu 2 built without any plugin, 
