--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.50 2004/03/09 20:58:41 krzyzak Exp $
+dnl $Id: configure.in,v 1.51 2004/03/09 23:59:40 krzyzak Exp $
 
 m4_define([gg2_version],[2.0_CVS])
 
@@ -116,7 +116,6 @@ if test x$want_gdb = xyes; then
  CFLAGS="$CFLAGS -ggdb"
 fi
 
-
 want_gui=no
 want_gtkspell=no
 want_gadu=no
@@ -132,9 +131,9 @@ want_external=no
 want_update=no
 want_docklet_system_tray=no
 want_docklet_dockapp=no
-want_all=no
+want_perl=no
 
-AC_ARG_WITH(all_plugins, [  --with-all-plugins	  Build all plugins		default=no])
+AC_ARG_WITH(all_plugins, [  --with-all-plugins	  Build all plugins with all features		default=no])
 if test x$with_all_plugins = xyes; then
     with_gui=yes
     with_gtkspell=yes
@@ -151,53 +150,45 @@ if test x$with_all_plugins = xyes; then
     with_update=yes
     with_docklet_system_tray=yes
     with_docklet_dockapp=yes
+    with_perl=yes
 fi
 
-AC_ARG_ENABLE(perl, [  --enable-perl		  perl support			default=disabled],
-    if test x$enableval = xyes; then
-	want_perl=yes
-    else
-	if test "x$enableval" = xno; then
-	    want_perl=no
-	else
-	    want_perl=yes
-	fi
-    fi,
-    want_perl=no)
-
-if test "x$want_perl" = "xyes"; then
+AC_ARG_WITH(perl, [  --with-perl		  perl support			default=disabled])
+if test x$with_perl = xyes; then
+    want_perl=yes
     AC_PATH_PROG(perlpath, perl)
     AC_PATH_PROG(sedpath, sed)
     AC_MSG_CHECKING(for Perl compile flags)
     PERL_CFLAGS=`$perlpath -MExtUtils::Embed -e ccopts 2>/dev/null`
     if test "_$PERL_CFLAGS" = "_"; then
-	AC_MSG_RESULT([not found, building without perl.])
+        AC_MSG_RESULT([not found, building without perl.])
 	want_perl=no
     else
-      PERL_LDFLAGS=`$perlpath -MExtUtils::Embed -e ldopts`
-#      PERL_LDFLAGS=`$perlpath -MExtUtils::Embed -e ldopts |$sedpath 's/-lgdbm //'`
-#      PERL_LDFLAGS=`echo $PERL_LDFLAGS |$sedpath 's/-ldb //'`
-#      PERL_LDFLAGS=`echo $PERL_LDFLAGS |$sedpath 's/-lndbm //'`
-#      PERL_LDFLAGS=`echo $PERL_LDFLAGS |$sedpath 's/-lnsl //'`
-#      PERL_LDFLAGS=`echo $PERL_LDFLAGS |$sedpath 's/-lposix //'`
-#      PERL_LDFLAGS=`echo $PERL_LDFLAGS |$sedpath 's/-lc //'`
-      AC_MSG_RESULT(ok)
+	PERL_LDFLAGS=`$perlpath -MExtUtils::Embed -e ldopts`
+	AC_MSG_RESULT(ok)
 
-      oldLIBS=$LIBS
-      PERL_OPTION_LIBS="$LIBS $PERL_LDFLAGS"
-      AC_CHECK_FUNCS(eval_pv)
-      PERL_OPTION_LIBS=$oldLIBS
-      
-      PERL_OPTION_CFLAGS="$CFLAGS $PERL_CFLAGS"
-      PERL_OPTION_LDFLAGS="$LDFLAGS $PERL_LDFLAGS"
-      AC_DEFINE(PERL_EMBED)
-      AC_SUBST(PERL_OPTION_LIBS)
-      AC_SUBST(PERL_OPTION_CFLAGS)
-      AC_SUBST(PERL_OPTION_LDFLAGS)
-      CFLAGS="$CFLAGS $PERL_OPTION_CFLAGS"
+        oldLIBS=$LIBS
+        PERL_OPTION_LIBS="$LIBS $PERL_LDFLAGS"
+	AC_CHECK_FUNCS(eval_pv)
+        PERL_OPTION_LIBS=$oldLIBS
+        PERL_OPTION_CFLAGS="$CFLAGS $PERL_CFLAGS"
+        PERL_OPTION_LDFLAGS="$LDFLAGS $PERL_LDFLAGS"
+        AC_DEFINE(PERL_EMBED)
+        AC_SUBST(PERL_OPTION_LIBS)
+        AC_SUBST(PERL_OPTION_CFLAGS)
+        AC_SUBST(PERL_OPTION_LDFLAGS)
+        CFLAGS="$CFLAGS $PERL_OPTION_CFLAGS"
     fi
 fi
 
+dnl if test "x$with_perl" = "xyes"; then
+dnl       PERL_LDFLAGS=`$perlpath -MExtUtils::Embed -e ldopts |$sedpath 's/-lgdbm //'`
+dnl       PERL_LDFLAGS=`echo $PERL_LDFLAGS |$sedpath 's/-ldb //'`
+dnl       PERL_LDFLAGS=`echo $PERL_LDFLAGS |$sedpath 's/-lndbm //'`
+dnl       PERL_LDFLAGS=`echo $PERL_LDFLAGS |$sedpath 's/-lnsl //'`
+dnl       PERL_LDFLAGS=`echo $PERL_LDFLAGS |$sedpath 's/-lposix //'`
+dnl       PERL_LDFLAGS=`echo $PERL_LDFLAGS |$sedpath 's/-lc //'`
+dnl fi
 
 AC_ARG_WITH(gui, [  --with-gui		  Build gtk2 GUI plugin		default=no])
 if test "x$with_gui" = "xyes"; then 
