--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.52 2004/03/12 13:06:10 shaster Exp $
+dnl $Id: configure.in,v 1.53 2004/04/02 10:06:50 krzyzak Exp $
 
 m4_define([gg2_version],[2.0_CVS])
 
@@ -212,30 +212,34 @@ fi
 AC_ARG_WITH(gadu, [  --with-gadu		  Build gadu-gadu plugin	default=no])
 if test "x$with_gadu" = "xyes"; then 
     want_gadu=yes
-    PKG_CHECK_MODULES(GG,libgadu >= 1.3.1 ,[],want_gadu=no)
-
-	if test "$want_gadu" = "no"; then 
-	    PKG_CHECK_MODULES(GG,libgadu = CVS,want_gadu=yes,want_gadu=no)
-	    if test "$want_gadu" = "yes"; then
-	        AC_MSG_WARN(You are using CVS libgadu version! Hope you know what you are doing!)
-	    fi
-	fi
-	
-    if test "$want_gadu" = "no"; then 
-    	AC_MSG_WARN($GG_PKG_ERRORS)
-	echo 
-	echo "**********************************************************"
-	echo 
-	echo "Gadu-Gadu plugin has been disabled!"
-	echo "You don't have libgadu installed (or you have wrong version)"
-	echo "Please download ekg: http://dev.null.pl/ekg"
-	echo 
-	echo "**********************************************************"
-	echo
-    fi
+    prev=`pwd`
+    cd src/plugins/gadu_gadu/libgadu
+    ./configure
+    cd $prev
+dnl     PKG_CHECK_MODULES(GG,libgadu >= 1.3.1 ,[],want_gadu=no)
+dnl 
+dnl 	if test "$want_gadu" = "no"; then 
+dnl 	    PKG_CHECK_MODULES(GG,libgadu = CVS,want_gadu=yes,want_gadu=no)
+dnl 	    if test "$want_gadu" = "yes"; then
+dnl 	        AC_MSG_WARN(You are using CVS libgadu version! Hope you know what you are doing!)
+dnl 	    fi
+dnl 	fi
+dnl 	
+dnl     if test "$want_gadu" = "no"; then 
+dnl    	AC_MSG_WARN($GG_PKG_ERRORS)
+dnl 	echo 
+dnl 	echo "**********************************************************"
+dnl 	echo 
+dnl 	echo "Gadu-Gadu plugin has been disabled!"
+dnl 	echo "You don't have libgadu installed (or you have wrong version)"
+dnl 	echo "Please download ekg: http://dev.null.pl/ekg"
+dnl 	echo 
+dnl 	echo "**********************************************************"
+dnl 	echo
+dnl     fi
     
-    AC_SUBST(GG_LIBS)
-    AC_SUBST(GG_CFLAGS)
+dnl    AC_SUBST(GG_LIBS)
+dnl    AC_SUBST(GG_CFLAGS)
 fi
 
 AC_ARG_WITH(tlen, [  --with-tlen		  Build tlen plugin		default=no])
