--- a/src/plugins/gadu_gadu/libgadu/configure.in
+++ b/src/plugins/gadu_gadu/libgadu/configure.in
@@ -1,9 +1,10 @@
-dnl $Id: configure.in,v 1.2 2004/04/02 10:57:44 krzyzak Exp $
+dnl $Id: configure.in,v 1.3 2004/04/02 12:04:10 krzyzak Exp $
 
 AC_INIT(lib/libgadu.h)
 AM_INIT_AUTOMAKE([lib/libgadu.h],[1.4])
 AC_PREREQ(2.50)
 AC_CONFIG_HEADERS(config.h)
+AM_PROG_LIBTOOL
 
 AC_SUBST(CFLAGS_LIBGADU)
 AC_SUBST(LIBS_LIBGADU)
